fix css on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,6 @@ nav {
   border: 0;
   border-radius: 6px;
   cursor: pointer;
-  margin-right: 12px;
 }
 
 .book__delete-button {
@@ -117,6 +116,7 @@ nav {
 
 .book__comment-input {
   margin-right: 12px;
+  min-width: 0;
 }
 
 .message {
@@ -125,4 +125,19 @@ nav {
 
 .book__comment-form {
   display: flex;
+}
+
+.book__actions button {
+  margin-right: 12px;
+}
+
+@media screen and (max-width: 500px) {
+  .book__actions {
+    display: flex;
+    flex-direction: column;
+  }
+  .book__actions button {
+    margin-right: 0;
+    margin-bottom: 12px;
+  }
 }
